force-app/main/default/objects/Case/fields/FS_AceptaRespuesta__c.field-meta.xml
<CustomField>
    <fullName>FS_AceptaRespuesta__c</fullName>
    <label>Acepta Respuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValoresSiNo</valueSetName>
    </valueSet>
</CustomField>