force-app/main/default/objects/Case/fields/FS_AprobacionSolucionIPN2__c.field-meta.xml
<CustomField>
    <fullName>FS_AprobacionSolucionIPN2__c</fullName>
    <label>Aprobación Solución IP-N2?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_ValoresSiNo</valueSetName>
    </valueSet>
</CustomField>