force-app/main/default/objects/Case/fields/FS_Area__c.field-meta.xml
<CustomField>
    <fullName>FS_Area__c</fullName>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N1. OMNIA</fullName>
            </value>
            <value>
                <fullName>N1. CORE</fullName>
            </value>
            <value>
                <fullName>N2-OMNIA</fullName>
            </value>
            <value>
                <fullName>N2- CORE</fullName>
            </value>
            <value>
                <fullName>QA CC-OMNIA</fullName>
            </value>
            <value>
                <fullName>QA CC-CORE</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>