force-app/main/default/objects/Case/fields/FS_Carterizacion__c.field-meta.xml
<CustomField>
    <fullName>FS_Carterizacion__c</fullName>
    <label>Carterización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>