force-app/main/default/objects/Case/fields/FS_ComentariosAprobacionInstalacionParch__c.field-meta.xml
<CustomField>
    <fullName>FS_ComentariosAprobacionInstalacionParch__c</fullName>
    <label>Comentarios Aprobación Instalación Parch</label>
    <type>TextArea</type>
</CustomField>