force-app/main/default/objects/Case/fields/FS_ComentariosAprobacionSolucinRelease__c.field-meta.xml
<CustomField>
    <fullName>FS_ComentariosAprobacionSolucinRelease__c</fullName>
    <label>Comentarios Aprobación Solución Release</label>
    <type>TextArea</type>
</CustomField>