force-app/main/default/objects/Case/fields/FS_ComentariosInternos__c.field-meta.xml
<CustomField>
    <fullName>FS_ComentariosInternos__c</fullName>
    <label>Comentarios internos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>