force-app/main/default/objects/Case/fields/FS_FechaEntregaDesarrollo__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaEntregaDesarrollo__c</fullName>
    <label>Fecha de entrega del desarrollo</label>
    <type>Date</type>
</CustomField>