force-app/main/default/objects/Case/fields/FS_MotivoInsatisfaccion__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoInsatisfaccion__c</fullName>
    <label>Motivo de Insatisfacción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Información Incompleta</fullName>
            </value>
            <value>
                <fullName>Tiempo de entrega</fullName>
            </value>
            <value>
                <fullName>No se ofrece alternativas</fullName>
            </value>
            <value>
                <fullName>Entrega tiene errores</fullName>
            </value>
            <value>
                <fullName>Desconocimiento del negocio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>