force-app/main/default/objects/Case/fields/FS_MotivoNoEntregaParche__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoNoEntregaParche__c</fullName>
    <label>Motivo de no se entrega el parche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio en fecha de entrega</fullName>
            </value>
            <value>
                <fullName>Release plan</fullName>
            </value>
            <value>
                <fullName>Bloqueo por dependencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>