force-app/main/default/objects/Case/fields/FS_MotivoRechazoAprobacionIPRealease__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoRechazoAprobacionIPRealease__c</fullName>
    <label>Motivo rechazo aprobación IP- Realease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desarrollo incompleto</fullName>
            </value>
            <value>
                <fullName>Error en documentación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>