force-app/main/default/objects/Case/fields/FS_MotivoRechazoPlanPruebas__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoRechazoPlanPruebas__c</fullName>
    <label>Motivo de rechazo plan de pruebas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incosistencia en plan de pruebas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>