force-app/main/default/objects/Case/fields/FS_MotivoRechazoSDRelease__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoRechazoSDRelease__c</fullName>
    <label>Motivos de rechazo por SD - Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falta de aprobanción PR</fullName>
            </value>
            <value>
                <fullName>Inconsitencia en parche</fullName>
            </value>
            <value>
                <fullName>Documentación incompleta</fullName>
            </value>
            <value>
                <fullName>Error en documentación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>