force-app/main/default/objects/Case/fields/FS_MotivosErrorInstalacion__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivosErrorInstalacion__c</fullName>
    <label>Motivos de error en instalación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error en copilación</fullName>
            </value>
            <value>
                <fullName>Error en scripts</fullName>
            </value>
            <value>
                <fullName>Error en levantar el ambiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>