force-app/main/default/objects/Case/fields/FS_MotivosRechazoAprobacionIPN2__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivosRechazoAprobacionIPN2__c</fullName>
    <label>Motivo de rechazo de aprobación IP-N2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desarrollo incompleto</fullName>
            </value>
            <value>
                <fullName>Desarrollo erróneo</fullName>
            </value>
            <value>
                <fullName>Documentación incompleta</fullName>
            </value>
            <value>
                <fullName>Error en documentación</fullName>
            </value>
            <value>
                <fullName>Inconsistencia objetos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>