force-app/main/default/objects/Case/fields/FS_NombrePropietario__c.field-meta.xml
<CustomField>
    <fullName>FS_NombrePropietario__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Propietario</label>
    <type>Text</type>
</CustomField>