force-app/main/default/objects/Case/fields/FS_NumeroRequerimientosNuevo__c.field-meta.xml
<CustomField>
    <fullName>FS_NumeroRequerimientosNuevo__c</fullName>
    <label>Número de Requerimientos Nuevo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>