force-app/main/default/objects/Case/fields/FS_PudeSolventarPregunta__c.field-meta.xml
<CustomField>
    <fullName>FS_PudeSolventarPregunta__c</fullName>
    <label>Pude solventar la pregunta?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>