force-app/main/default/objects/Case/fields/FS_ResultadoEncuesta__c.field-meta.xml
<CustomField>
    <fullName>FS_ResultadoEncuesta__c</fullName>
    <label>Resultado Encuesta</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>