force-app/main/default/objects/Case/fields/FS_SubModulo__c.field-meta.xml
<CustomField>
    <fullName>FS_SubModulo__c</fullName>
    <label>Sub Módulo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parametrización</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Ajustes</fullName>
            </value>
            <value>
                <fullName>Apertura caja</fullName>
            </value>
            <value>
                <fullName>Auxiliares</fullName>
            </value>
            <value>
                <fullName>Bloqueos</fullName>
            </value>
            <value>
                <fullName>Bloqueos/Desbloqueos</fullName>
            </value>
            <value>
                <fullName>Cancelación</fullName>
            </value>
            <value>
                <fullName>Carga de Información</fullName>
            </value>
            <value>
                <fullName>Cargos/Comisiones/Impuestos</fullName>
            </value>
            <value>
                <fullName>Cartas de Crédito</fullName>
            </value>
            <value>
                <fullName>Cierre</fullName>
            </value>
            <value>
                <fullName>Clientes</fullName>
            </value>
            <value>
                <fullName>Cobranzas</fullName>
            </value>
            <value>
                <fullName>Comprobantes Fiscales</fullName>
            </value>
            <value>
                <fullName>Compromisos/Líneas de Crédito</fullName>
            </value>
            <value>
                <fullName>Consulta</fullName>
            </value>
            <value>
                <fullName>Contabilidad</fullName>
            </value>
            <value>
                <fullName>Convenios</fullName>
            </value>
            <value>
                <fullName>Cuadre</fullName>
            </value>
            <value>
                <fullName>Cupones</fullName>
            </value>
            <value>
                <fullName>Desembolso</fullName>
            </value>
            <value>
                <fullName>Estados de Cuenta</fullName>
            </value>
            <value>
                <fullName>Facturación</fullName>
            </value>
            <value>
                <fullName>Facturas</fullName>
            </value>
            <value>
                <fullName>Garantias</fullName>
            </value>
            <value>
                <fullName>Generación de Comprobantes</fullName>
            </value>
            <value>
                <fullName>Incrementos</fullName>
            </value>
            <value>
                <fullName>Inicio/Fin de día</fullName>
            </value>
            <value>
                <fullName>Integración</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>