force-app/main/default/objects/Case/fields/FS_UsuarioAprobacionSolucionIPRelease__c.field-meta.xml
<CustomField>
    <fullName>FS_UsuarioAprobacionSolucionIPRelease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Aprobación de Solución IP-Releas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos2</relationshipName>
    <type>Lookup</type>
</CustomField>