force-app/main/default/objects/Case/recordTypes/FS_Consulta.recordType-meta.xml
<RecordType>
    <fullName>FS_Consulta</fullName>
    <active>true</active>
    <businessProcess>FS_Casos</businessProcess>
    <label>Consulta</label>
</RecordType>