force-app/main/default/objects/Case/recordTypes/FS_Solicitud.recordType-meta.xml
<RecordType>
    <fullName>FS_Solicitud</fullName>
    <active>true</active>
    <businessProcess>FS_CasoSolicitud</businessProcess>
    <label>Solicitud</label>
</RecordType>