force-app/main/default/objects/Case/validationRules/FS_ValidacionAprobacionSolucionIPRelease.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionAprobacionSolucionIPRelease</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  TEXT(FS_SubEstado__c) = &quot;Aprobación de Solución IP-Release&quot;,
  $UserRole.DeveloperName !=  &quot;FS_JefeReleases&quot;
)</errorConditionFormula>
    <errorMessage>El caso se encuentra en Aprobación de Solución IP-Release y no tiene permisos para modificarlo.</errorMessage>
</ValidationRule>