force-app/main/default/objects/Case/validationRules/FS_validacionCasoNuevoAgente.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_validacionCasoNuevoAgente</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),   CONTAINS( $UserRole.DeveloperName , &apos;FS_Agente&apos;) )</errorConditionFormula>
    <errorMessage>Solo los jefes y administradores tienen permisos para crear casos.</errorMessage>
</ValidationRule>