force-app/main/default/objects/Case/validationRules/FS_ValidacionDatosRespuesta.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionDatosRespuesta</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(FS_AceptaRespuesta__c) == &quot;No&quot;,  TEXT( FS_MotivoInsatisfaccion__c ) == null)</errorConditionFormula>
    <errorDisplayField>FS_MotivoInsatisfaccion__c</errorDisplayField>
    <errorMessage>Debe llenar el motivo de Insatisfacción</errorMessage>
</ValidationRule>