force-app/main/default/objects/Case/validationRules/FS_ValidacionFechaCompromiso.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionFechaCompromiso</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(FS_FechaCompromisoEntrega__c),  TEXT(FS_SubEstado__c) != &apos;Análisis Consulta N1&apos;, TEXT(FS_SubEstado__c) != &apos;Análisis Consulta N2&apos; )</errorConditionFormula>
    <errorDisplayField>FS_FechaCompromisoEntrega__c</errorDisplayField>
    <errorMessage>Este campo solo es modificable en el estado de análisis.</errorMessage>
</ValidationRule>