force-app/main/default/objects/Case/validationRules/FS_ValidacionRechazoIDRelease.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionRechazoIDRelease</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT( FS_AprobacionSolucionDefinitivaRelease__c ) = &quot;No&quot;, 
    TEXT( FS_MotivoRechazoSDN2__c ) = null
)</errorConditionFormula>
    <errorDisplayField>FS_MotivoRechazoSDN2__c</errorDisplayField>
    <errorMessage>Escriba el motivo de rechazo.</errorMessage>
</ValidationRule>