force-app/main/default/objects/Case/validationRules/FS_ValidacionRechazoSolucionIPN2.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionRechazoSolucionIPN2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT( FS_AutorizacionSolucionIPN2__c ) = &quot;No&quot;, 
    TEXT( FS_MotivosRechazoAprobacionIPN2__c ) = null
)</errorConditionFormula>
    <errorDisplayField>FS_MotivosRechazoAprobacionIPN2__c</errorDisplayField>
    <errorMessage>Escriba el motivo de rechazo.</errorMessage>
</ValidationRule>