force-app/main/default/objects/Case/validationRules/FS_ValidacionRespuestaCliente.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionRespuestaCliente</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(FS_AprobacionSolucion__c) == &quot;Si&quot;,  
    FS_RespuestaCliente__c == null,
     FS_NombreTipoRegistro__c == &apos;Consulta&apos;
)</errorConditionFormula>
    <errorDisplayField>FS_RespuestaCliente__c</errorDisplayField>
    <errorMessage>Debe llenar la respuesta que se enviara al cliente</errorMessage>
</ValidationRule>