force-app/main/default/objects/Case/validationRules/FS_ValidacionTipoIncidente.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionTipoIncidente</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(FS_TipoIncidente__c),
  OR(
    AND(
      TEXT(PRIORVALUE(FS_TipoIncidente__c)) = &apos;Definitivo&apos;,
      TEXT(FS_TipoIncidente__c) = &apos;Puntual&apos;
    ),
    TEXT(FS_TipoIncidente__c) = NULL
  )
)</errorConditionFormula>
    <errorDisplayField>FS_TipoIncidente__c</errorDisplayField>
    <errorMessage>Acción incorrecta, debe crear un nuevo caso.</errorMessage>
</ValidationRule>