force-app/main/default/objects/Case/listViews/AtencionN1Core.listView-meta.xml
<ListView>
    <fullName>AtencionN1Core</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FS_Carterizacion__c</columns>
    <columns>FS_NombreTipoRegistro__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>FS_SubEstado__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FS_Area__c</field>
        <operation>equals</operation>
        <value>N1. CORE</value>
    </filters>
    <label>Atención N1 - Core</label>
</ListView>